# geistendard

./: .gitignore  LICENSE  Makefile  README.ko.md  README.md  codebook.toml  download_upstream.py  pyproject.toml
assets/: 한글 파일명.txt
scripts/: build-nerd-fonts.sh
src/geistendard/: __init__.py  builder.py  cli.py
src/jetendard/: builder.py  cli.py
tests/: __init__.py  test_builder.py  test_cli.py
